Set overflow to auto to prevent
This prevents the unnecessary scrollbars on large screens but still makes able to scroll when needed.

--- a/src/components/organisms/Sidebar/styles.module.scss
+++ b/src/components/organisms/Sidebar/styles.module.scss
@@ -7,7 +7,7 @@
 	height: 100%;
 	max-height: 100vh;
 	position: sticky;
-	overflow: scroll;
+	overflow: auto;
 	top: 0;
 	transition: transform 0.5s ease-in-out, opacity 0.5s ease-out 0s;
 	list-style: none;
